# ssr-gtk

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  db.rs  main.rs  ssr.rs
src/view/: home.rs  mod.rs
src/widgets/: header.rs  mod.rs  notice.rs
ui/: window.glade
